Four more people

--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -50,32 +50,33 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/furstenau_tara.html, people/gacenga_francis.html, people/gan_emilia.html,
   people/garcia-algarra_javier.html, people/garcia-gutierrez_leonor.html, people/garcia_julian.html,
   people/gardner_paul.html, people/garoutte_aaron.html, people/gates_chris.html, people/gatto_laurent.html,
-  people/geiger_stuart.html, people/geldenhuis_andre.html, people/ghaffari_noushin.html,
-  people/gibling_heather.html, people/gibson_molly.html, people/goble_c.html, people/gogoglou_antonia.html,
-  people/gonzalez_ivan.html, people/gorman_gerard.html, people/graham_laura.html,
-  people/grande_bruno.html, people/gray_jeremy.html, people/gross_jonathan.html, people/guignard_thomas.html,
-  people/gustavsen_j.html, people/guy_t.html, people/guyer_jonathan.html, people/guzman_melissa.html,
-  people/haddock_s.html, people/haine_denis.html, people/hames_sam.html, people/hamm_christopher.html,
-  people/hamrick_jessica.html, people/hansen_m.html, people/harris_rayna.html, people/harrison_anthony.html,
-  people/harstad_emelie.html, people/hart_t.html, people/hawke_ian.html, people/hayek_wolfgang.html,
-  people/held_fabian.html, people/henderson_donna.html, people/henry_ian.html, people/heroux_martin.html,
-  people/herr_joshua.html, people/hertweck_kate.html, people/hetherington_james.html,
-  people/hiebert_james.html, people/hinchliff_cody.html, people/hinsen_k.html, people/hjelm_johan.html,
-  people/ho_xavier.html, people/hocking_daniel.html, people/hodge_amy.html, people/hodges_toby.html,
-  people/hojjati_alireza.html, people/holdgraf_c.html, people/hollister_jeff.html,
-  people/hoyt_peter.html, people/huang_daisie.html, people/huff_k.html, people/imamoglu_fatma.html,
-  people/irving_d.html, people/ismiraldi_yuandra.html, people/ivanov_p.html, people/jackson_m.html,
-  people/jacobs_christian.html, people/jarecka_dorota.html, people/jedrzejewski-szmek_zbigniew.html,
-  people/johnson_ben.html, people/johnston_luke.html, people/johnston_myfanwy.html,
-  people/jones_dm.html, people/jones_martin.html, people/joyce_blake.html, people/kajic_ivana.html,
-  people/kazmi_saira.html, people/kelly_tom.html, people/kerr_j.html, people/ketcheson_david.html,
-  people/khetani_radhika.html, people/kim_jan.html, people/king_wt.html, people/kintsakis_athanassios.html,
-  people/kiral-kornek_isabell.html, people/kitzes_j.html, people/klerke_sigrid.html,
-  people/knuth_shelley.html, people/koch_christina.html, people/koenig_steven.html,
-  people/koeppel_alexander.html, people/konrad_b.html, people/koontz_michael.html,
-  people/kozlov_igor.html, people/kumar_avishek.html, people/kuzak_mateusz.html, people/kwakwa_kwasi.html,
-  people/labou_stephanie.html, people/lafleur_olivier.html, people/laforest-lapointe_isabelle.html,
-  people/lagesen_k.html, people/lake_sherry.html, people/laken_benjamin.html, people/lant_jeremiah.html,
+  people/ge_baolai.html, people/geiger_stuart.html, people/geldenhuis_andre.html,
+  people/ghaffari_noushin.html, people/gibling_heather.html, people/gibson_molly.html,
+  people/goble_c.html, people/gogoglou_antonia.html, people/gonzalez_ivan.html, people/gorman_gerard.html,
+  people/graham_laura.html, people/grande_bruno.html, people/gray_jeremy.html, people/gross_jonathan.html,
+  people/guignard_thomas.html, people/gustavsen_j.html, people/guy_t.html, people/guyer_jonathan.html,
+  people/guzman_melissa.html, people/haddock_s.html, people/haine_denis.html, people/hames_sam.html,
+  people/hamm_christopher.html, people/hamrick_jessica.html, people/hansen_m.html,
+  people/harris_rayna.html, people/harrison_anthony.html, people/harstad_emelie.html,
+  people/hart_t.html, people/hawke_ian.html, people/hayek_wolfgang.html, people/held_fabian.html,
+  people/henderson_donna.html, people/henry_ian.html, people/heroux_martin.html, people/herr_joshua.html,
+  people/hertweck_kate.html, people/hetherington_james.html, people/hiebert_james.html,
+  people/hinchliff_cody.html, people/hinsen_k.html, people/hjelm_johan.html, people/ho_xavier.html,
+  people/hocking_daniel.html, people/hodge_amy.html, people/hodges_toby.html, people/hojjati_alireza.html,
+  people/holdgraf_c.html, people/hollister_jeff.html, people/hoyt_peter.html, people/huang_daisie.html,
+  people/huff_k.html, people/imamoglu_fatma.html, people/irving_d.html, people/ismiraldi_yuandra.html,
+  people/ivanov_p.html, people/jackson_m.html, people/jacobs_christian.html, people/jarecka_dorota.html,
+  people/jedrzejewski-szmek_zbigniew.html, people/johnson_ben.html, people/johnston_luke.html,
+  people/johnston_myfanwy.html, people/jones_dm.html, people/jones_martin.html, people/joyce_blake.html,
+  people/kajic_ivana.html, people/kazmi_saira.html, people/kelly_tom.html, people/kerr_j.html,
+  people/ketcheson_david.html, people/khetani_radhika.html, people/kim_jan.html, people/king_wt.html,
+  people/kintsakis_athanassios.html, people/kiral-kornek_isabell.html, people/kitzes_j.html,
+  people/klerke_sigrid.html, people/knuth_shelley.html, people/koch_christina.html,
+  people/koenig_steven.html, people/koeppel_alexander.html, people/konrad_b.html,
+  people/koontz_michael.html, people/kozlov_igor.html, people/kumar_avishek.html,
+  people/kuzak_mateusz.html, people/kwakwa_kwasi.html, people/labou_stephanie.html,
+  people/lafleur_olivier.html, people/laforest-lapointe_isabelle.html, people/lagesen_k.html,
+  people/lake_sherry.html, people/laken_benjamin.html, people/lant_jeremiah.html,
   people/lasher_c.html, people/latornell_d.html, people/laufersweiler_mark.html, people/lebauer_david.html,
   people/lee_kate.html, people/lee_kwangchun.html, people/lee_luke.html, people/lehtomaki_joona.html,
   people/leng_joanna.html, people/levernier_jacob.html, people/leyder_jean-christophe.html,
@@ -123,30 +124,31 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/sampath_ramesh.html, people/sanders_shane.html, people/sane_maneesha.html,
   people/sarahan_michael.html, people/schilling_martin.html, people/schloss_pat.html,
   people/schmeier_sebastian.html, people/schmidt_marian.html, people/schneider_juliane.html,
-  people/schossau_j.html, people/schwartz_rachel.html, people/scopatz_a.html, people/selik_m.html,
-  people/senyondo_henry.html, people/serra_neem.html, people/shambaugh_brent.html,
-  people/sharan_malvika.html, people/shelton_j.html, people/shelton_jennifer.html,
-  people/sheneman_leigh.html, people/sherman_jason.html, people/shih_yu-ching.html,
-  people/shiklomanov_alexey.html, people/shkurti_ardita.html, people/silva_raniere.html,
-  people/simpkin_sarah.html, people/simpson_jack.html, people/simpson_john.html, people/slaybaugh_rachel.html,
-  people/sloggett_clare.html, people/small_luc.html, people/smith_allison.html, people/smith_byron.html,
-  people/smith_daniel.html, people/smith_j.html, people/smithyman_brendan.html, people/smorul_mike.html,
-  people/soares-siqueira_abel.html, people/soderberg_courtney.html, people/soontiens_nancy.html,
-  people/speer_donald.html, people/srinath_ashwin.html, people/srinivasan_karthik.html,
-  people/st-onge_pier-luc.html, people/stachelek_joseph.html, people/stacy_mark.html,
-  people/stafford_jeff.html, people/standage_daniel.html, people/staneva_valentina.html,
-  people/stanton-cook_mitchell.html, people/stapleton_jim.html, people/staton_margaret.html,
-  people/steinbach_peter.html, people/stevens_sarah.html, people/stillwell_mark.html,
-  people/stimberg_marcel.html, people/strootman_jonathan.html, people/stubbs_daniel.html,
-  people/sumner_mike.html, people/sundaram_arvind.html, people/supp_s.html, people/svaksha.html,
-  people/swaminathan_gayathri.html, people/taber-thomas_bradley.html, people/tarkowski_leszek.html,
-  people/tarvin_becca.html, people/tatman_rachael.html, people/taylor_cody.html, people/teal_t.html,
-  people/telenczuk_bartosz.html, people/telenczuk_maria.html, people/terman_rochelle.html,
-  people/teucher_andrew.html, people/thoele_florian.html, people/thomas_adam.html,
-  people/thomson_samuel.html, people/thrimawithana_amali.html, people/till_robert.html,
-  people/timbers_tiffany.html, people/tomlinson_christopher.html, people/tomsett_richard.html,
-  people/tran_lina.html, people/trimble_will.html, people/troendle_tim.html, people/turek_daniel.html,
-  people/turner_s.html, people/tweedie_fiona.html, people/ugalde_juan.html, people/ushizima_daniela.html,
+  people/schoenrock_andrew.html, people/schossau_j.html, people/schwartz_rachel.html,
+  people/scopatz_a.html, people/selik_m.html, people/senyondo_henry.html, people/serra_neem.html,
+  people/shambaugh_brent.html, people/sharan_malvika.html, people/shelton_j.html,
+  people/shelton_jennifer.html, people/sheneman_leigh.html, people/sherman_jason.html,
+  people/shih_yu-ching.html, people/shiklomanov_alexey.html, people/shkurti_ardita.html,
+  people/silva_raniere.html, people/simpkin_sarah.html, people/simpson_jack.html,
+  people/simpson_john.html, people/slaybaugh_rachel.html, people/sloggett_clare.html,
+  people/small_luc.html, people/smith_allison.html, people/smith_byron.html, people/smith_daniel.html,
+  people/smith_j.html, people/smithyman_brendan.html, people/smorul_mike.html, people/soares-siqueira_abel.html,
+  people/soderberg_courtney.html, people/soontiens_nancy.html, people/speer_donald.html,
+  people/srinath_ashwin.html, people/srinivasan_karthik.html, people/st-onge_pier-luc.html,
+  people/stachelek_joseph.html, people/stacy_mark.html, people/stafford_jeff.html,
+  people/standage_daniel.html, people/staneva_valentina.html, people/stanton-cook_mitchell.html,
+  people/stapleton_jim.html, people/staton_margaret.html, people/steinbach_peter.html,
+  people/stevens_sarah.html, people/stillwell_mark.html, people/stimberg_marcel.html,
+  people/strootman_jonathan.html, people/stubbs_daniel.html, people/sumner_mike.html,
+  people/sundaram_arvind.html, people/supp_s.html, people/svaksha.html, people/swaminathan_gayathri.html,
+  people/taber-thomas_bradley.html, people/tarkowski_leszek.html, people/tarvin_becca.html,
+  people/tatman_rachael.html, people/taylor_cody.html, people/teal_t.html, people/telenczuk_bartosz.html,
+  people/telenczuk_maria.html, people/terman_rochelle.html, people/teucher_andrew.html,
+  people/thoele_florian.html, people/thomas_adam.html, people/thomson_samuel.html,
+  people/thrimawithana_amali.html, people/till_robert.html, people/timbers_tiffany.html,
+  people/tomlinson_christopher.html, people/tomsett_richard.html, people/tran_lina.html,
+  people/trimble_will.html, people/troendle_tim.html, people/turek_daniel.html, people/turner_s.html,
+  people/tweedie_fiona.html, people/ugalde_juan.html, people/ushizima_daniela.html,
   people/vahtras_olav.html, people/vaidyanathan_ramnath.html, people/valls-guimera_roman.html,
   people/van-der-helm_edwin.html, people/van-der-walt_anelda.html, people/van-heusden_peter.html,
   people/van-rossum_thea.html, people/van-schyndel_jay.html, people/van-tuyl_steve.html,
@@ -163,9 +165,10 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/williams_ryan.html, people/williamson_evan.html, people/williford_anna.html,
   people/willmore_frank.html, people/wilson_aidan.html, people/wilson_g.html, people/wilson_p.html,
   people/winston_donald.html, people/winton_jared.html, people/woo_kara.html, people/woods_c.html,
-  people/wright_thomas.html, people/wu_steven.html, people/yang_fan.html, people/yang_hsi-kai.html,
-  people/young_lynn.html, people/zakkaroff_constantine.html, people/zhang_jingchao.html,
-  people/zhang_qp.html, people/zimmerman_naupaka.html, people/zito_t.html, people/zonca_andrea.html]
+  people/wright_thomas.html, people/wu_steven.html, people/wyder_stefan.html, people/xiao_xiao.html,
+  people/yang_fan.html, people/yang_hsi-kai.html, people/young_lynn.html, people/zakkaroff_constantine.html,
+  people/zhang_jingchao.html, people/zhang_qp.html, people/zimmerman_naupaka.html,
+  people/zito_t.html, people/zonca_andrea.html]
 projects: [projects/active-papers.html, projects/archer.html, projects/astropy.html,
   projects/biostars.html, projects/cyclus.html, projects/ecodata-retriever.html, projects/eff-phys.html,
   projects/gap.html, projects/genomics-virtual-lab.html, projects/git-rdm.html, projects/ipfs.html,
