--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -44,21 +44,22 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/etxaniz_oier.html, people/evans_andy.html, people/eyers_david.html, people/faghirhagh_varda.html,
   people/falster_daniel.html, people/farsarakis_emmanouil.html, people/fauber_bennet.html,
   people/fei_xu.html, people/ferguson_angus.html, people/fernandes_filipe.html, people/fernandez-valverde_selene.html,
-  people/figueira_l.html, people/fishman_dmytro.html, people/fitzjohn_rich.html, people/flaxman_abraham.html,
-  people/fonnesbeck_chris.html, people/fontenelle_hugues.html, people/ford_jes.html,
-  people/ford_talitha.html, people/forstner_konrad.html, people/fournier_auriel.html,
-  people/fowler_philip.html, people/friedline_chris.html, people/fu_zhuo.html, people/fucile_geoffrey.html,
-  people/furstenau_tara.html, people/gacenga_francis.html, people/gallinger_jessica.html,
-  people/gan_emilia.html, people/garcia-algarra_javier.html, people/garcia-gutierrez_leonor.html,
-  people/garcia_julian.html, people/gardner_paul.html, people/garoutte_aaron.html,
-  people/gates_chris.html, people/gatto_laurent.html, people/ge_baolai.html, people/geiger_stuart.html,
-  people/geldenhuis_andre.html, people/ghaffari_noushin.html, people/gibling_heather.html,
-  people/gibson_molly.html, people/goble_c.html, people/gogoglou_antonia.html, people/gonzalez_ivan.html,
-  people/gorman_gerard.html, people/graham_laura.html, people/grande_bruno.html, people/gray_jeremy.html,
-  people/gross_jonathan.html, people/guignard_thomas.html, people/gustavsen_j.html,
-  people/guy_t.html, people/guyer_jonathan.html, people/guzman_melissa.html, people/haddock_s.html,
-  people/haine_denis.html, people/hames_sam.html, people/hamm_christopher.html, people/hamrick_jessica.html,
-  people/hansen_m.html, people/harris_rayna.html, people/harrison_anthony.html, people/harstad_emelie.html,
+  people/ferreira-bocca_felipe.html, people/figueira_l.html, people/fishman_dmytro.html,
+  people/fitzjohn_rich.html, people/flaxman_abraham.html, people/fonnesbeck_chris.html,
+  people/fontenelle_hugues.html, people/ford_jes.html, people/ford_talitha.html, people/forstner_konrad.html,
+  people/fournier_auriel.html, people/fowler_philip.html, people/friedline_chris.html,
+  people/fu_zhuo.html, people/fucile_geoffrey.html, people/furstenau_tara.html, people/gacenga_francis.html,
+  people/gallinger_jessica.html, people/gan_emilia.html, people/garcia-algarra_javier.html,
+  people/garcia-gutierrez_leonor.html, people/garcia_julian.html, people/gardner_paul.html,
+  people/garoutte_aaron.html, people/gates_chris.html, people/gatto_laurent.html,
+  people/ge_baolai.html, people/geiger_stuart.html, people/geldenhuis_andre.html,
+  people/ghaffari_noushin.html, people/gibling_heather.html, people/gibson_molly.html,
+  people/goble_c.html, people/gogoglou_antonia.html, people/gonzalez_ivan.html, people/gorman_gerard.html,
+  people/graham_laura.html, people/grande_bruno.html, people/gray_jeremy.html, people/gross_jonathan.html,
+  people/guignard_thomas.html, people/gustavsen_j.html, people/guy_t.html, people/guyer_jonathan.html,
+  people/guzman_melissa.html, people/haddock_s.html, people/haine_denis.html, people/hames_sam.html,
+  people/hamm_christopher.html, people/hamrick_jessica.html, people/hansen_m.html,
+  people/harris_rayna.html, people/harrison_anthony.html, people/harstad_emelie.html,
   people/hart_t.html, people/hawke_ian.html, people/hayek_wolfgang.html, people/held_fabian.html,
   people/henderson_donna.html, people/henry_ian.html, people/heroux_martin.html, people/herr_joshua.html,
   people/hertweck_kate.html, people/hetherington_james.html, people/hiebert_james.html,
@@ -79,21 +80,21 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/lafleur_olivier.html, people/laforest-lapointe_isabelle.html, people/lagesen_k.html,
   people/lake_sherry.html, people/laken_benjamin.html, people/lant_jeremiah.html,
   people/lasher_c.html, people/latornell_d.html, people/laufersweiler_mark.html, people/lebauer_david.html,
-  people/lee_kate.html, people/lee_kwangchun.html, people/lee_luke.html, people/lehtomaki_joona.html,
-  people/leng_joanna.html, people/levernier_jacob.html, people/leyder_jean-christophe.html,
-  people/li_peter.html, people/liberton_denise.html, people/lightman_matthew.html,
-  people/lijnzaad_philip.html, people/lin_johnny.html, people/liu_gang.html, people/lonsdale_andrew.html,
-  people/lotterhos_kathleen.html, people/love_rebecca.html, people/lowe_elijah.html,
-  people/lowndes_julia.html, people/luo_yuxi.html, people/ma_eric.html, people/macdonell_cam.html,
-  people/macindoe_gary.html, people/maclean_dan.html, people/madin_j.html, people/madison_cindee.html,
-  people/magle_tobin.html, people/manhaes-savio_alexandre.html, people/mansour_tamer.html,
-  people/marconi_sergio.html, people/maree_naudene.html, people/marek_diana.html,
-  people/marini_camille.html, people/martinez_paula.html, people/marwaha_kunal.html,
-  people/marwick_ben.html, people/masakuna_jordan.html, people/mashchenko_sergey.html,
-  people/masoud-ansari_sina.html, people/may_ryan.html, people/mayer_fernando.html,
-  people/mcclatchy_sue.html, people/mcclung_bill.html, people/mcdonald_daniel.html,
-  people/mcgough_s.html, people/mcgoveran_catherine.html, people/mckay_sheldon.html,
-  people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
+  people/lee_kate.html, people/lee_kwangchun.html, people/lee_luke.html, people/leeman_john.html,
+  people/lehtomaki_joona.html, people/leng_joanna.html, people/levernier_jacob.html,
+  people/leyder_jean-christophe.html, people/li_peter.html, people/liberton_denise.html,
+  people/lightman_matthew.html, people/lijnzaad_philip.html, people/lin_johnny.html,
+  people/liu_gang.html, people/lonsdale_andrew.html, people/lotterhos_kathleen.html,
+  people/love_rebecca.html, people/lowe_elijah.html, people/lowndes_julia.html, people/luo_yuxi.html,
+  people/ma_eric.html, people/macdonell_cam.html, people/macindoe_gary.html, people/maclean_dan.html,
+  people/madin_j.html, people/madison_cindee.html, people/magle_tobin.html, people/manhaes-savio_alexandre.html,
+  people/mansour_tamer.html, people/marconi_sergio.html, people/maree_naudene.html,
+  people/marek_diana.html, people/marini_camille.html, people/martinez_paula.html,
+  people/marwaha_kunal.html, people/marwick_ben.html, people/masakuna_jordan.html,
+  people/mashchenko_sergey.html, people/masoud-ansari_sina.html, people/may_ryan.html,
+  people/mayer_fernando.html, people/mcclatchy_sue.html, people/mcclung_bill.html,
+  people/mcdonald_daniel.html, people/mcgough_s.html, people/mcgoveran_catherine.html,
+  people/mckay_sheldon.html, people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
   people/mctavish_ej.html, people/medrela_krzysztof.html, people/meister_sarah.html,
   people/menegon_stefano.html, people/metz_jeremy.html, people/michael_lauren.html,
   people/michnowicz_s.html, people/michonneau_francois.html, people/mickley_james.html,
@@ -123,17 +124,17 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/riley_janet.html, people/rio_david.html, people/ritchie_scott.html, people/roberts_leah.html,
   people/robinson_james.html, people/robinson_natalie.html, people/robinson_rosario.html,
   people/rohl_andrew.html, people/rokem_a.html, people/rosenfield_phil.html, people/rosner_jamie.html,
-  people/ross_noam.html, people/rowell_bill.html, people/rugis_john.html, people/ruttley_m.html,
-  people/sadjadi_seyed-mahdi.html, people/sampath_ramesh.html, people/sanders_shane.html,
-  people/sane_maneesha.html, people/sarahan_michael.html, people/schilling_martin.html,
-  people/schloss_pat.html, people/schmeier_sebastian.html, people/schmidt_marian.html,
-  people/schneider_juliane.html, people/schoenrock_andrew.html, people/schossau_j.html,
-  people/schwartz_rachel.html, people/scopatz_a.html, people/selik_m.html, people/senyondo_henry.html,
-  people/serra_neem.html, people/shambaugh_brent.html, people/sharan_malvika.html,
-  people/shelton_j.html, people/shelton_jennifer.html, people/sheneman_leigh.html,
-  people/sherman_jason.html, people/shih_yu-ching.html, people/shiklomanov_alexey.html,
-  people/shkurti_ardita.html, people/silva_raniere.html, people/simpkin_sarah.html,
-  people/simpson_jack.html, people/simpson_john.html, people/slaybaugh_rachel.html,
+  people/ross_noam.html, people/rowell_bill.html, people/rugis_john.html, people/russo_dan.html,
+  people/ruttley_m.html, people/sadjadi_seyed-mahdi.html, people/sampath_ramesh.html,
+  people/sanders_shane.html, people/sane_maneesha.html, people/sarahan_michael.html,
+  people/schilling_martin.html, people/schloss_pat.html, people/schmeier_sebastian.html,
+  people/schmidt_marian.html, people/schneider_juliane.html, people/schoenrock_andrew.html,
+  people/schossau_j.html, people/schwartz_rachel.html, people/scopatz_a.html, people/selik_m.html,
+  people/senyondo_henry.html, people/serra_neem.html, people/shambaugh_brent.html,
+  people/sharan_malvika.html, people/shelton_j.html, people/shelton_jennifer.html,
+  people/sheneman_leigh.html, people/sherman_jason.html, people/shih_yu-ching.html,
+  people/shiklomanov_alexey.html, people/shkurti_ardita.html, people/silva_raniere.html,
+  people/simpkin_sarah.html, people/simpson_jack.html, people/simpson_john.html, people/slaybaugh_rachel.html,
   people/sloggett_clare.html, people/small_luc.html, people/smith_allison.html, people/smith_byron.html,
   people/smith_daniel.html, people/smith_j.html, people/smithyman_brendan.html, people/smorul_mike.html,
   people/soares-siqueira_abel.html, people/soderberg_courtney.html, people/soontiens_nancy.html,
@@ -146,17 +147,18 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/stueker_oliver.html, people/sumner_mike.html, people/sundaram_arvind.html,
   people/supp_s.html, people/svaksha.html, people/swaminathan_gayathri.html, people/taber-thomas_bradley.html,
   people/tarkowski_leszek.html, people/tarvin_becca.html, people/tatman_rachael.html,
-  people/taylor_cody.html, people/teal_t.html, people/telenczuk_bartosz.html, people/telenczuk_maria.html,
-  people/terman_rochelle.html, people/teucher_andrew.html, people/thoele_florian.html,
-  people/thomas_adam.html, people/thomson_samuel.html, people/thrimawithana_amali.html,
-  people/till_robert.html, people/timbers_tiffany.html, people/tomlinson_christopher.html,
-  people/tomsett_richard.html, people/tran_lina.html, people/trimble_will.html, people/troendle_tim.html,
-  people/turek_daniel.html, people/turner_s.html, people/tweedie_fiona.html, people/ugalde_juan.html,
-  people/ushizima_daniela.html, people/vahtras_olav.html, people/vaidyanathan_ramnath.html,
-  people/valls-guimera_roman.html, people/van-der-helm_edwin.html, people/van-der-walt_anelda.html,
-  people/van-heusden_peter.html, people/van-rossum_thea.html, people/van-schyndel_jay.html,
-  people/van-tuyl_steve.html, people/vandervalk_steven.html, people/vanichkina_darya.html,
-  people/varga_vicky.html, people/vargas_horacio.html, people/varoquaux_n.html, people/vera_b.html,
+  people/taylor_cody.html, people/teague_brian.html, people/teal_t.html, people/telenczuk_bartosz.html,
+  people/telenczuk_maria.html, people/terman_rochelle.html, people/teucher_andrew.html,
+  people/thoele_florian.html, people/thomas_adam.html, people/thomson_samuel.html,
+  people/thrimawithana_amali.html, people/till_robert.html, people/timbers_tiffany.html,
+  people/tomlinson_christopher.html, people/tomsett_richard.html, people/tran_lina.html,
+  people/trimble_will.html, people/troendle_tim.html, people/turek_daniel.html, people/turner_s.html,
+  people/tweedie_fiona.html, people/ugalde_juan.html, people/ushizima_daniela.html,
+  people/vahtras_olav.html, people/vaidyanathan_ramnath.html, people/valls-guimera_roman.html,
+  people/van-der-helm_edwin.html, people/van-der-walt_anelda.html, people/van-heusden_peter.html,
+  people/van-rossum_thea.html, people/van-schyndel_jay.html, people/van-tuyl_steve.html,
+  people/vandervalk_steven.html, people/vanichkina_darya.html, people/varga_vicky.html,
+  people/vargas_horacio.html, people/varoquaux_n.html, people/vera_b.html, people/via_allegra.html,
   people/viana_a.html, people/vilbig_kevin.html, people/von-bieberstein_philipp.html,
   people/vonderlinden_jens.html, people/wake_leanne.html, people/walker_andrew.html,
   people/walker_dawn.html, people/wallis_mike.html, people/walsh_alistair.html, people/warren_dan.html,
