--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -22,28 +22,29 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/cannam_c.html, people/capes_gerard.html, people/caporaso_greg.html, people/card_daren.html,
   people/carr_lindsay.html, people/cartwright_reed.html, people/cerino_t.html, people/chamberlain_s.html,
   people/chan_cliburn.html, people/charbonneau_amanda.html, people/chase_john.html,
-  people/chatzidimitriou_kyriakos.html, people/chen_daniel.html, people/chisholm_chelsea.html,
-  people/choi_jin.html, people/cholia_s.html, people/christensen_erica.html, people/christensen_garret.html,
-  people/chuang-howe_a.html, people/chue-hong_n.html, people/chung_kally.html, people/chung_kathy.html,
-  people/clare_richard.html, people/clayton_sarah.html, people/clayton_sophie.html,
-  people/cmero_marek.html, people/code_w.html, people/coelho_luis.html, people/collings_ruth.html,
-  people/collins_arliss.html, people/collins_matthew.html, people/colonna_vincenza.html,
-  people/cordero_victor.html, people/corless_john.html, people/corvellec_marianne.html,
-  people/coudrat_thomas.html, people/cox_grace.html, people/cox_logan.html, people/cozzini_s.html,
-  people/cranston_k.html, people/crouch_nicholas.html, people/crouch_s.html, people/croucher_mike.html,
-  people/crusoe_michael.html, people/daigle_remi.html, people/dale_ryan.html, people/dashnow_harriet.html,
-  people/davenport_e.html, people/davey_rob.html, people/davis_m.html, people/davis_neal.html,
-  people/debo_christof.html, people/demichelis_raffaella.html, people/dennis_tim.html,
-  people/derrick_james.html, people/desjardins_james.html, people/devenyi_gabriel.html,
-  people/devisetty_upendra-kumar.html, people/devlin_catherine.html, people/diaz-gil_andres.html,
-  people/dickenson_matt.html, people/dickson_r.html, people/didion_john.html, people/diong_joanna.html,
-  people/doehle_phillip.html, people/dolson_emily.html, people/dotson_david.html,
-  people/doyle_kimberly.html, people/droop_alastair.html, people/duchesne_laurent.html,
-  people/duckles_jonah.html, people/duffy_meghan.html, people/duncan_susan.html, people/earl_stevan.html,
-  people/eddelbuettel_dirk.html, people/ely_j.html, people/emonet_remi.html, people/erlich_aaron.html,
-  people/etxaniz_oier.html, people/evans_andy.html, people/eyers_david.html, people/faghirhagh_varda.html,
-  people/falster_daniel.html, people/farsarakis_emmanouil.html, people/fauber_bennet.html,
-  people/fei_xu.html, people/ferguson_angus.html, people/fernandes_filipe.html, people/fernandez-valverde_selene.html,
+  people/chatzidimitriou_kyriakos.html, people/chen_daniel.html, people/chiapello_marco.html,
+  people/chisholm_chelsea.html, people/choi_jin.html, people/cholia_s.html, people/christensen_erica.html,
+  people/christensen_garret.html, people/chuang-howe_a.html, people/chue-hong_n.html,
+  people/chung_kally.html, people/chung_kathy.html, people/clare_richard.html, people/clayton_sarah.html,
+  people/clayton_sophie.html, people/cmero_marek.html, people/code_w.html, people/coelho_luis.html,
+  people/collings_ruth.html, people/collins_arliss.html, people/collins_matthew.html,
+  people/colonna_vincenza.html, people/coome_lindsay.html, people/cordero_victor.html,
+  people/corless_john.html, people/corvellec_marianne.html, people/coudrat_thomas.html,
+  people/cox_grace.html, people/cox_logan.html, people/cozzini_s.html, people/cranston_k.html,
+  people/crouch_nicholas.html, people/crouch_s.html, people/croucher_mike.html, people/crusoe_michael.html,
+  people/daigle_remi.html, people/dale_ryan.html, people/dashnow_harriet.html, people/davenport_e.html,
+  people/davey_rob.html, people/davis_m.html, people/davis_neal.html, people/debo_christof.html,
+  people/demichelis_raffaella.html, people/dennis_tim.html, people/derrick_james.html,
+  people/desjardins_james.html, people/devenyi_gabriel.html, people/devisetty_upendra-kumar.html,
+  people/devlin_catherine.html, people/diaz-gil_andres.html, people/dickenson_matt.html,
+  people/dickson_r.html, people/didion_john.html, people/diong_joanna.html, people/doehle_phillip.html,
+  people/dolson_emily.html, people/dotson_david.html, people/doyle_kimberly.html,
+  people/droop_alastair.html, people/duchesne_laurent.html, people/duckles_jonah.html,
+  people/duffy_meghan.html, people/duncan_susan.html, people/earl_stevan.html, people/eddelbuettel_dirk.html,
+  people/ely_j.html, people/emonet_remi.html, people/erlich_aaron.html, people/etxaniz_oier.html,
+  people/evans_andy.html, people/eyers_david.html, people/faghirhagh_varda.html, people/falster_daniel.html,
+  people/farsarakis_emmanouil.html, people/fauber_bennet.html, people/fei_xu.html,
+  people/ferguson_angus.html, people/fernandes_filipe.html, people/fernandez-valverde_selene.html,
   people/ferreira-bocca_felipe.html, people/figueira_l.html, people/fishman_dmytro.html,
   people/fitzjohn_rich.html, people/flaxman_abraham.html, people/fonnesbeck_chris.html,
   people/fontenelle_hugues.html, people/ford_jes.html, people/ford_talitha.html, people/forstner_konrad.html,
@@ -95,46 +96,47 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/mayer_fernando.html, people/mcclatchy_sue.html, people/mcclung_bill.html,
   people/mcdonald_daniel.html, people/mcgough_s.html, people/mcgoveran_catherine.html,
   people/mckay_sheldon.html, people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
-  people/mctavish_ej.html, people/medrela_krzysztof.html, people/meister_sarah.html,
-  people/menegon_stefano.html, people/metz_jeremy.html, people/michael_lauren.html,
-  people/michnowicz_s.html, people/michonneau_francois.html, people/mickley_james.html,
-  people/middleton_ryan.html, people/miles_brian.html, people/milhans_jackie.html,
-  people/mills_b.html, people/miotto_amanda.html, people/mistry_meeta.html, people/mitchell_i.html,
-  people/mohr_christian-wilhelm.html, people/mokhtarzadeh_hamid.html, people/moore_jason.html,
-  people/moore_timothy.html, people/morris_b.html, people/mudrak_erika.html, people/mueller_andreas.html,
-  people/mueller_markus.html, people/munk_madicken.html, people/munoz_ian.html, people/murtaza_ghulam.html,
-  people/nagraj_vp.html, people/nahum_josh.html, people/nakhoul_hani.html, people/namburi_sandeep.html,
-  people/nandez_jose.html, people/navarro_francisco.html, people/nederbragt_l.html,
-  people/neeb_moritz.html, people/nenadic_aleksandra.html, people/neufeld_ryan.html,
-  people/nielsen_daiva.html, people/nielsen_jens.html, people/nilsson_matthias.html,
-  people/norris_timothy.html, people/nunez-iglesias_juan.html, people/ocais_alan.html,
-  people/odell_allison-jai.html, people/ogrady_tina.html, people/oleary_aaron.html,
-  people/oliver_jeffrey.html, people/olson_r.html, people/olsson_catherine.html, people/orendt_anita.html,
-  people/orr_adam.html, people/ory_j.html, people/otsuji_reid.html, people/palamartchouk_kirill.html,
-  people/palm_francisco.html, people/paulo_martin.html, people/pawlik_a.html, people/pearson_john.html,
-  people/peek_ryan.html, people/pell_j.html, people/perez-suarez_david.html, people/perez_f.html,
-  people/perignon_mariela.html, people/perrett_heidi.html, people/perry_adam.html,
-  people/peru_giacomo.html, people/petre_m.html, people/pfenninger_s.html, people/pinska_adrianna.html,
-  people/pipitone_j.html, people/pitchers_w.html, people/plumbley_m.html, people/pollard_tom.html,
-  people/pomorski_pawel.html, people/preeyanon_likit.html, people/pritchard_leighton.html,
-  people/profiti_giuseppe.html, people/provencher_francoise.html, people/psomopoulos_fotis.html,
-  people/pue_s.html, people/ram_k.html, people/ramalingam_saravanan.html, people/ramos-musalem_ana-karina.html,
-  people/ranjard_louis.html, people/rawat_rohit.html, people/razoumov_alex.html, people/read_emily.html,
-  people/rice_timothy.html, people/richie-halford_adam.html, people/riemer_kristina.html,
-  people/riley_janet.html, people/rio_david.html, people/ritchie_scott.html, people/roberts_leah.html,
-  people/robinson_james.html, people/robinson_natalie.html, people/robinson_rosario.html,
-  people/rohl_andrew.html, people/rokem_a.html, people/rosenfield_phil.html, people/rosner_jamie.html,
-  people/ross_noam.html, people/rowell_bill.html, people/rugis_john.html, people/russo_dan.html,
-  people/ruttley_m.html, people/sadjadi_seyed-mahdi.html, people/sampath_ramesh.html,
+  people/mctavish_ej.html, people/medrela_krzysztof.html, people/mehta_prateek.html,
+  people/meister_sarah.html, people/menegon_stefano.html, people/metz_jeremy.html,
+  people/michael_lauren.html, people/michnowicz_s.html, people/michonneau_francois.html,
+  people/mickley_james.html, people/middleton_ryan.html, people/miles_brian.html,
+  people/milhans_jackie.html, people/mills_b.html, people/miotto_amanda.html, people/mistry_meeta.html,
+  people/mitchell_i.html, people/mohr_christian-wilhelm.html, people/mokhtarzadeh_hamid.html,
+  people/moore_jason.html, people/moore_timothy.html, people/morris_b.html, people/mudrak_erika.html,
+  people/mueller_andreas.html, people/mueller_markus.html, people/munk_madicken.html,
+  people/munoz_ian.html, people/murtaza_ghulam.html, people/nagraj_vp.html, people/nahum_josh.html,
+  people/nakhoul_hani.html, people/namburi_sandeep.html, people/nandez_jose.html,
+  people/navarro_francisco.html, people/nederbragt_l.html, people/neeb_moritz.html,
+  people/nenadic_aleksandra.html, people/neufeld_ryan.html, people/nielsen_daiva.html,
+  people/nielsen_jens.html, people/nilsson_matthias.html, people/norris_timothy.html,
+  people/nunez-iglesias_juan.html, people/ocais_alan.html, people/odell_allison-jai.html,
+  people/ogrady_tina.html, people/oleary_aaron.html, people/oliver_jeffrey.html, people/olson_r.html,
+  people/olsson_catherine.html, people/orendt_anita.html, people/orr_adam.html, people/ory_j.html,
+  people/otsuji_reid.html, people/palamartchouk_kirill.html, people/palm_francisco.html,
+  people/paulo_martin.html, people/pawlik_a.html, people/pearson_john.html, people/peek_ryan.html,
+  people/pell_j.html, people/perez-suarez_david.html, people/perez_f.html, people/perignon_mariela.html,
+  people/perrett_heidi.html, people/perry_adam.html, people/peru_giacomo.html, people/petre_m.html,
+  people/pfenninger_s.html, people/pinska_adrianna.html, people/pipitone_j.html, people/pitchers_w.html,
+  people/plumbley_m.html, people/pollard_tom.html, people/pomorski_pawel.html, people/preeyanon_likit.html,
+  people/pritchard_leighton.html, people/profiti_giuseppe.html, people/provencher_francoise.html,
+  people/psomopoulos_fotis.html, people/pue_s.html, people/ram_k.html, people/ramalingam_saravanan.html,
+  people/ramos-musalem_ana-karina.html, people/ranjard_louis.html, people/rawat_rohit.html,
+  people/razoumov_alex.html, people/read_emily.html, people/rice_timothy.html, people/richie-halford_adam.html,
+  people/riemer_kristina.html, people/riley_janet.html, people/rio_david.html, people/ritchie_scott.html,
+  people/roberts_leah.html, people/robinson_james.html, people/robinson_natalie.html,
+  people/robinson_rosario.html, people/rohl_andrew.html, people/rokem_a.html, people/rosenfield_phil.html,
+  people/rosner_jamie.html, people/ross_noam.html, people/rowell_bill.html, people/rugis_john.html,
+  people/russo_dan.html, people/ruttley_m.html, people/sadjadi_seyed-mahdi.html, people/sampath_ramesh.html,
   people/sanders_shane.html, people/sane_maneesha.html, people/sarahan_michael.html,
   people/schilling_martin.html, people/schloss_pat.html, people/schmeier_sebastian.html,
   people/schmidt_marian.html, people/schneider_juliane.html, people/schoenrock_andrew.html,
-  people/schossau_j.html, people/schwartz_rachel.html, people/scopatz_a.html, people/selik_m.html,
-  people/senyondo_henry.html, people/serra_neem.html, people/shambaugh_brent.html,
-  people/sharan_malvika.html, people/shelton_j.html, people/shelton_jennifer.html,
-  people/sheneman_leigh.html, people/sherman_jason.html, people/shih_yu-ching.html,
-  people/shiklomanov_alexey.html, people/shkurti_ardita.html, people/silva_raniere.html,
-  people/simpkin_sarah.html, people/simpson_jack.html, people/simpson_john.html, people/slaybaugh_rachel.html,
+  people/schossau_j.html, people/schurch_anita.html, people/schwartz_rachel.html,
+  people/scopatz_a.html, people/selik_m.html, people/senyondo_henry.html, people/serra_neem.html,
+  people/shafquat_afrah.html, people/shambaugh_brent.html, people/sharan_malvika.html,
+  people/shelton_j.html, people/shelton_jennifer.html, people/sheneman_leigh.html,
+  people/sherman_jason.html, people/shih_yu-ching.html, people/shiklomanov_alexey.html,
+  people/shkurti_ardita.html, people/silva_raniere.html, people/simpkin_sarah.html,
+  people/simpson_jack.html, people/simpson_john.html, people/slaybaugh_rachel.html,
   people/sloggett_clare.html, people/small_luc.html, people/smith_allison.html, people/smith_byron.html,
   people/smith_daniel.html, people/smith_j.html, people/smithyman_brendan.html, people/smorul_mike.html,
   people/soares-siqueira_abel.html, people/soderberg_courtney.html, people/soontiens_nancy.html,
