--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -4,36 +4,38 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/allen_james.html, people/alonzi_pete.html, people/alsheikh-hussain_areej.html,
   people/anderson_c.html, people/andrew_carrie.html, people/anghel_catalina.html,
   people/ankenbrand_markus.html, people/antonioletti_mario.html, people/aranda_j.html,
-  people/aruliah_d.html, people/avestruz_camille.html, people/badalamenti_jon.html,
-  people/bae_sung.html, people/bahlai_christie.html, people/bajcz_alex.html, people/ballinger_thomas.html,
-  people/baltzell_asher.html, people/banaszkiewicz_piotr.html, people/barmby_pauline.html,
-  people/barneche_diego.html, people/barr_ewan.html, people/bast_radovan.html, people/batut_berenice.html,
+  people/aruliah_d.html, people/ashander_jaime.html, people/avestruz_camille.html,
+  people/badalamenti_jon.html, people/bae_sung.html, people/bahlai_christie.html,
+  people/bajcz_alex.html, people/ballinger_thomas.html, people/baltzell_asher.html,
+  people/banaszkiewicz_piotr.html, people/barmby_pauline.html, people/barneche_diego.html,
+  people/barr_ewan.html, people/barra_christian.html, people/bast_radovan.html, people/batut_berenice.html,
   people/bauer_dana.html, people/bayer_p.html, people/beagrie_robert.html, people/beitey_david.html,
   people/bekolay_trevor.html, people/belcaid_mahdi.html, people/belikov_evgenij.html,
   people/bell_jason.html, people/bennett_n.html, people/berghold_jared.html, people/bergman_casey.html,
-  people/berry_michelle.html, people/blakk_lukas.html, people/blischak_j.html, people/boettiger_carl.html,
-  people/boissonneault_maxime.html, people/bond_s.html, people/bonnie_jessica.html,
-  people/bonsma_madeleine.html, people/boocock_james.html, people/bostroem_a.html,
-  people/boughton_andrew.html, people/bouquin_daina.html, people/bowman_ross.html,
-  people/boyle_amy.html, people/bray_e.html, people/brin_lindsay.html, people/broman_karl.html,
-  people/brown_amy.html, people/brown_ct.html, people/brown_kyler.html, people/brunson_dana.html,
-  people/bryan_j.html, people/brym_zachary.html, people/burns_s.html, people/cabunoc_abigail.html,
-  people/calhoun_patrick.html, people/camins-esakov_jared.html, people/canino-koning_r.html,
-  people/cannam_c.html, people/capes_gerard.html, people/caporaso_greg.html, people/card_daren.html,
-  people/carr_lindsay.html, people/cartwright_reed.html, people/cerino_t.html, people/chamberlain_s.html,
-  people/chan_cliburn.html, people/charbonneau_amanda.html, people/chase_john.html,
-  people/chatzidimitriou_kyriakos.html, people/chen_daniel.html, people/chiapello_marco.html,
-  people/chisholm_chelsea.html, people/choi_jin.html, people/cholia_s.html, people/christensen_erica.html,
-  people/christensen_garret.html, people/chuang-howe_a.html, people/chue-hong_n.html,
-  people/chung_kally.html, people/chung_kathy.html, people/clare_richard.html, people/clayton_sarah.html,
-  people/clayton_sophie.html, people/cmero_marek.html, people/code_w.html, people/coelho_luis.html,
-  people/collings_ruth.html, people/collins_arliss.html, people/collins_matthew.html,
-  people/colonna_vincenza.html, people/coome_lindsay.html, people/cordero_victor.html,
-  people/corless_john.html, people/corvellec_marianne.html, people/coudrat_thomas.html,
-  people/cox_grace.html, people/cox_logan.html, people/cozzini_s.html, people/cranston_k.html,
-  people/crouch_nicholas.html, people/crouch_s.html, people/croucher_mike.html, people/crusoe_michael.html,
-  people/daigle_remi.html, people/dale_ryan.html, people/dashnow_harriet.html, people/davenport_e.html,
-  people/davey_rob.html, people/davis_m.html, people/davis_neal.html, people/debo_christof.html,
+  people/bernard_joey.html, people/berry_michelle.html, people/bjornstad_marius.html,
+  people/blakk_lukas.html, people/blischak_j.html, people/boettiger_carl.html, people/boissonneault_maxime.html,
+  people/bond_s.html, people/bonnie_jessica.html, people/bonsma_madeleine.html, people/boocock_james.html,
+  people/bostroem_a.html, people/boughton_andrew.html, people/bouquin_daina.html,
+  people/bowman_ross.html, people/boyle_amy.html, people/bray_e.html, people/breckels_lisa.html,
+  people/brin_lindsay.html, people/broman_karl.html, people/brown_amy.html, people/brown_ct.html,
+  people/brown_kyler.html, people/brunson_dana.html, people/bryan_j.html, people/brym_zachary.html,
+  people/burns_s.html, people/cabunoc_abigail.html, people/calhoun_patrick.html, people/camins-esakov_jared.html,
+  people/canino-koning_r.html, people/cannam_c.html, people/capes_gerard.html, people/caporaso_greg.html,
+  people/card_daren.html, people/carr_lindsay.html, people/carroll_ian.html, people/cartwright_reed.html,
+  people/cerino_t.html, people/chamberlain_s.html, people/chan_cliburn.html, people/charbonneau_amanda.html,
+  people/chase_john.html, people/chatzidimitriou_kyriakos.html, people/chen_daniel.html,
+  people/chiapello_marco.html, people/chisholm_chelsea.html, people/choi_jin.html,
+  people/cholia_s.html, people/christensen_erica.html, people/christensen_garret.html,
+  people/chuang-howe_a.html, people/chue-hong_n.html, people/chung_kally.html, people/chung_kathy.html,
+  people/clare_richard.html, people/clayton_sarah.html, people/clayton_sophie.html,
+  people/cmero_marek.html, people/code_w.html, people/coelho_luis.html, people/collings_ruth.html,
+  people/collins_arliss.html, people/collins_matthew.html, people/colonna_vincenza.html,
+  people/coome_lindsay.html, people/cordero_victor.html, people/corless_john.html,
+  people/corvellec_marianne.html, people/coudrat_thomas.html, people/cox_grace.html,
+  people/cox_logan.html, people/cozzini_s.html, people/cranston_k.html, people/crouch_nicholas.html,
+  people/crouch_s.html, people/croucher_mike.html, people/crusoe_michael.html, people/daigle_remi.html,
+  people/dale_ryan.html, people/dashnow_harriet.html, people/davenport_e.html, people/davey_rob.html,
+  people/davis_m.html, people/davis_neal.html, people/debo_christof.html, people/deer_lachlan.html,
   people/demichelis_raffaella.html, people/dennis_tim.html, people/derrick_james.html,
   people/desjardins_james.html, people/devenyi_gabriel.html, people/devisetty_upendra-kumar.html,
   people/devlin_catherine.html, people/diaz-gil_andres.html, people/dickenson_matt.html,
@@ -59,15 +61,16 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/graham_laura.html, people/grande_bruno.html, people/gray_jeremy.html, people/gross_jonathan.html,
   people/guignard_thomas.html, people/gustavsen_j.html, people/guy_t.html, people/guyer_jonathan.html,
   people/guzman_melissa.html, people/haddock_s.html, people/haine_denis.html, people/hames_sam.html,
-  people/hamm_christopher.html, people/hamrick_jessica.html, people/hansen_m.html,
-  people/harris_rayna.html, people/harrison_anthony.html, people/harstad_emelie.html,
-  people/hart_t.html, people/hawke_ian.html, people/hayek_wolfgang.html, people/held_fabian.html,
-  people/henderson_donna.html, people/henry_ian.html, people/heroux_martin.html, people/herr_joshua.html,
-  people/hertweck_kate.html, people/hetherington_james.html, people/hiebert_james.html,
-  people/hinchliff_cody.html, people/hinsen_k.html, people/hjelm_johan.html, people/ho_xavier.html,
-  people/hocking_daniel.html, people/hodge_amy.html, people/hodges_toby.html, people/hojjati_alireza.html,
-  people/holdgraf_c.html, people/hollister_jeff.html, people/hoyt_peter.html, people/huang_daisie.html,
-  people/huff_k.html, people/imamoglu_fatma.html, people/irving_d.html, people/ismiraldi_yuandra.html,
+  people/hamm_christopher.html, people/hamrick_jessica.html, people/hannon_eilis.html,
+  people/hansen_m.html, people/harihareswara_sumana.html, people/harris_rayna.html,
+  people/harrison_anthony.html, people/harstad_emelie.html, people/hart_t.html, people/hawke_ian.html,
+  people/hayek_wolfgang.html, people/held_fabian.html, people/henderson_donna.html,
+  people/henry_ian.html, people/heroux_martin.html, people/herr_joshua.html, people/hertweck_kate.html,
+  people/hetherington_james.html, people/hiebert_james.html, people/hinchliff_cody.html,
+  people/hinsen_k.html, people/hjelm_johan.html, people/ho_xavier.html, people/hocking_daniel.html,
+  people/hodge_amy.html, people/hodges_toby.html, people/hojjati_alireza.html, people/holdgraf_c.html,
+  people/hollister_jeff.html, people/hoyt_peter.html, people/huang_daisie.html, people/huff_k.html,
+  people/imamoglu_fatma.html, people/irving_d.html, people/ismiraldi_yuandra.html,
   people/ivanov_p.html, people/jackson_m.html, people/jacobs_christian.html, people/james_nick.html,
   people/jarecka_dorota.html, people/jedrzejewski-szmek_zbigniew.html, people/johnson_ben.html,
   people/johnston_luke.html, people/johnston_myfanwy.html, people/jones_dm.html, people/jones_martin.html,
@@ -84,40 +87,42 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/lee_kate.html, people/lee_kwangchun.html, people/lee_luke.html, people/leeman_john.html,
   people/lehtomaki_joona.html, people/leng_joanna.html, people/levernier_jacob.html,
   people/leyder_jean-christophe.html, people/li_peter.html, people/liberton_denise.html,
-  people/lightman_matthew.html, people/lijnzaad_philip.html, people/lin_johnny.html,
-  people/liu_gang.html, people/lonsdale_andrew.html, people/lotterhos_kathleen.html,
-  people/love_rebecca.html, people/lowe_elijah.html, people/lowndes_julia.html, people/luo_yuxi.html,
-  people/ma_eric.html, people/macdonell_cam.html, people/macindoe_gary.html, people/maclean_dan.html,
-  people/madin_j.html, people/madison_cindee.html, people/magle_tobin.html, people/manhaes-savio_alexandre.html,
-  people/mansour_tamer.html, people/marconi_sergio.html, people/maree_naudene.html,
-  people/marek_diana.html, people/marini_camille.html, people/martinez_paula.html,
-  people/marwaha_kunal.html, people/marwick_ben.html, people/masakuna_jordan.html,
-  people/mashchenko_sergey.html, people/masoud-ansari_sina.html, people/may_ryan.html,
-  people/mayer_fernando.html, people/mcclatchy_sue.html, people/mcclung_bill.html,
-  people/mcdonald_daniel.html, people/mcgough_s.html, people/mcgoveran_catherine.html,
-  people/mckay_sheldon.html, people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
+  people/lightman_matthew.html, people/ligtenberg_willem.html, people/lijnzaad_philip.html,
+  people/lin_johnny.html, people/liu_gang.html, people/llebot_clara.html, people/lonsdale_andrew.html,
+  people/lotterhos_kathleen.html, people/love_rebecca.html, people/lowe_elijah.html,
+  people/lowndes_julia.html, people/luo_yuxi.html, people/ma_eric.html, people/macdonell_cam.html,
+  people/macindoe_gary.html, people/maclean_dan.html, people/madin_j.html, people/madison_cindee.html,
+  people/magle_tobin.html, people/manhaes-savio_alexandre.html, people/mansour_tamer.html,
+  people/marconi_sergio.html, people/maree_naudene.html, people/marek_diana.html,
+  people/marini_camille.html, people/martinez_paula.html, people/marwaha_kunal.html,
+  people/marwick_ben.html, people/masakuna_jordan.html, people/mashchenko_sergey.html,
+  people/masoud-ansari_sina.html, people/may_ryan.html, people/mayer_fernando.html,
+  people/mcclatchy_sue.html, people/mcclung_bill.html, people/mcdonald_daniel.html,
+  people/mcgough_s.html, people/mcgoveran_catherine.html, people/mckay_sheldon.html,
+  people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
   people/mctavish_ej.html, people/medrela_krzysztof.html, people/mehta_prateek.html,
   people/meister_sarah.html, people/menegon_stefano.html, people/metz_jeremy.html,
   people/michael_lauren.html, people/michnowicz_s.html, people/michonneau_francois.html,
   people/mickley_james.html, people/middleton_ryan.html, people/miles_brian.html,
   people/milhans_jackie.html, people/mills_b.html, people/miotto_amanda.html, people/mistry_meeta.html,
-  people/mitchell_i.html, people/mohr_christian-wilhelm.html, people/mokhtarzadeh_hamid.html,
-  people/moore_jason.html, people/moore_timothy.html, people/morris_b.html, people/mudrak_erika.html,
-  people/mueller_andreas.html, people/mueller_markus.html, people/munk_madicken.html,
-  people/munoz_ian.html, people/murtaza_ghulam.html, people/nagraj_vp.html, people/nahum_josh.html,
-  people/nakhoul_hani.html, people/namburi_sandeep.html, people/nandez_jose.html,
-  people/navarro_francisco.html, people/nederbragt_l.html, people/neeb_moritz.html,
-  people/nenadic_aleksandra.html, people/neufeld_ryan.html, people/nielsen_daiva.html,
-  people/nielsen_jens.html, people/nilsson_matthias.html, people/norris_timothy.html,
-  people/nunez-iglesias_juan.html, people/ocais_alan.html, people/odell_allison-jai.html,
-  people/ogrady_tina.html, people/oleary_aaron.html, people/oliver_jeffrey.html, people/olson_r.html,
-  people/olsson_catherine.html, people/orendt_anita.html, people/orr_adam.html, people/ory_j.html,
-  people/otsuji_reid.html, people/palamartchouk_kirill.html, people/palm_francisco.html,
-  people/paulo_martin.html, people/pawlik_a.html, people/pearson_john.html, people/peek_ryan.html,
-  people/pell_j.html, people/perez-suarez_david.html, people/perez_f.html, people/perignon_mariela.html,
-  people/perrett_heidi.html, people/perry_adam.html, people/peru_giacomo.html, people/petre_m.html,
-  people/pfenninger_s.html, people/pinska_adrianna.html, people/pipitone_j.html, people/pitchers_w.html,
-  people/plumbley_m.html, people/pollard_tom.html, people/pomorski_pawel.html, people/preeyanon_likit.html,
+  people/mitchell_i.html, people/mitchell_nora.html, people/mohr_christian-wilhelm.html,
+  people/mokhtarzadeh_hamid.html, people/moore_jason.html, people/moore_timothy.html,
+  people/morris_b.html, people/moyers_brook.html, people/mudrak_erika.html, people/mueller_andreas.html,
+  people/mueller_markus.html, people/munk_madicken.html, people/munoz_ian.html, people/murtaza_ghulam.html,
+  people/nagraj_vp.html, people/nahum_josh.html, people/nakhoul_hani.html, people/namburi_sandeep.html,
+  people/nandez_jose.html, people/navarro_francisco.html, people/nederbragt_l.html,
+  people/neeb_moritz.html, people/nenadic_aleksandra.html, people/neufeld_ryan.html,
+  people/nielsen_daiva.html, people/nielsen_jens.html, people/nilsson_matthias.html,
+  people/norris_timothy.html, people/nunez-iglesias_juan.html, people/ocais_alan.html,
+  people/odell_allison-jai.html, people/ogrady_tina.html, people/oleary_aaron.html,
+  people/oliver_jeffrey.html, people/olson_r.html, people/olsson_catherine.html, people/orendt_anita.html,
+  people/orr_adam.html, people/ory_j.html, people/otsuji_reid.html, people/palamartchouk_kirill.html,
+  people/palm_francisco.html, people/paulo_martin.html, people/pawlik_a.html, people/pearson_john.html,
+  people/peek_ryan.html, people/pell_j.html, people/perez-suarez_david.html, people/perez_f.html,
+  people/perignon_mariela.html, people/perrett_heidi.html, people/perry_adam.html,
+  people/peru_giacomo.html, people/petre_m.html, people/pfenninger_s.html, people/pierce_tessa.html,
+  people/pinska_adrianna.html, people/pipitone_j.html, people/pitchers_w.html, people/plumbley_m.html,
+  people/pollard_tom.html, people/pomorski_pawel.html, people/preeyanon_likit.html,
   people/pritchard_leighton.html, people/profiti_giuseppe.html, people/provencher_francoise.html,
   people/psomopoulos_fotis.html, people/pue_s.html, people/ram_k.html, people/ramalingam_saravanan.html,
   people/ramos-musalem_ana-karina.html, people/ranjard_louis.html, people/rawat_rohit.html,
@@ -133,7 +138,7 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/schossau_j.html, people/schurch_anita.html, people/schwartz_rachel.html,
   people/scopatz_a.html, people/selik_m.html, people/senyondo_henry.html, people/serra_neem.html,
   people/shafquat_afrah.html, people/shambaugh_brent.html, people/sharan_malvika.html,
-  people/shelton_j.html, people/shelton_jennifer.html, people/sheneman_leigh.html,
+  people/shaw_clara.html, people/shelton_j.html, people/shelton_jennifer.html, people/sheneman_leigh.html,
   people/sherman_jason.html, people/shih_yu-ching.html, people/shiklomanov_alexey.html,
   people/shkurti_ardita.html, people/silva_raniere.html, people/simpkin_sarah.html,
   people/simpson_jack.html, people/simpson_john.html, people/slaybaugh_rachel.html,
@@ -176,7 +181,7 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/wright_thomas.html, people/wu_steven.html, people/wyder_stefan.html, people/xiao_xiao.html,
   people/yang_fan.html, people/yang_hsi-kai.html, people/ye_isaac.html, people/young_lynn.html,
   people/zakkaroff_constantine.html, people/zhang_jingchao.html, people/zhang_qp.html,
-  people/zimmerman_naupaka.html, people/zito_t.html, people/zonca_andrea.html]
+  people/zimmerman_naupaka.html, people/zito_t.html, people/zonca_andrea.html, people/zuniga_juan-carlos.html]
 projects: [projects/active-papers.html, projects/archer.html, projects/astropy.html,
   projects/biostars.html, projects/cyclus.html, projects/ecodata-retriever.html, projects/eff-phys.html,
   projects/gap.html, projects/genomics-virtual-lab.html, projects/git-rdm.html, projects/ipfs.html,
